Fixing of background shape overflow

--- a/modules/mod_emundus_user_dropdown/style/mod_emundus_user_dropdown.css
+++ b/modules/mod_emundus_user_dropdown/style/mod_emundus_user_dropdown.css
@@ -47,6 +47,7 @@
     background-image: url('fond-formes-header.svg');
     background-repeat: no-repeat;
     background-position: right top;
+    background-color: var(--neutral-0);
 }
 
 #userDropdownMenu h5  {
